(readme) here's a board configuration for testing how to show the movement options for a piece
in this example,
some captures sequences are "prefixes" of others
some capture sequences diverge

I think the only way to show the available movements for complex configurations like this is showing just one at a time, navigating through them by scrolling

but it would be annoying if this was *the* way of showing movement options, since not all are complex like this and it's a lot simpler to just mark the destinations on the board

like if you needed to scroll between the only two simple moves available instead of just seeing both at the same time and clicking at one of them

so we need to detect when the set of available actions is complex enough that we need to show it in this special way, one at a time

simple moves don't need it
captures of length 1 don't need it
maybe only when there are captures of length >1 and one of them is a "prefix" of another:

one goes A -> B -> C
another just goes A -> B (prefix)
another goes A -> B -> X (diverges)
where the letters represent any board cell

--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -123,6 +123,19 @@
 
     const state = new CheckersState()
 
+    // for testing how to show all possible movement options of a piece (particularly complex example, but we should be able to handle it)
+    state.board = bo.decodeBoard([
+      '.....@..',
+      '........',
+      '...x....',
+      '........',
+      '.....x..',
+      '..x.....',
+      '.....x..',
+      '........',
+    ].join('\n'));
+    state.handleChange()
+
     let humanMovementChoices = []
 
     const depth = 6
