scaffolding for more draw detection
(there are some special endings in which five rounds with no winner causes a draw)
although the actual logic (#inSpecialEnding() function) to detect is still missing

also:

rename 'man' to 'pawn'

storing state piece count to avoid recomputation (calling bo.countPieces on the same board in multiple places)
(also refac heuristicCountPieces to use it)
this also helps with the draw detection logic, as it uses the counts for each kind of piece

--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -215,7 +215,8 @@
           [Status.draw]: 'Draw...',
         }[status];
         log.innerHTML += message
-        if (confirm(`${message}\nPlay again?`)) window.location.reload()
+        if (confirm(`${message}\nPlay again?`) || true) window.location.reload()
+        // || true because 'cancel' will try to keep the game going when it has just endend, causing some errors
         btn.setAttribute('disabled', 'disabled')
       }
       return status
