feat: can configure whether captures / best captures are mandatory
no interface for it yet though

--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -121,7 +121,9 @@
 
     // First player = white = human
 
-    const state = new CheckersState()
+    const state = new CheckersState({
+      capturesMandatory: false
+    })
 
     // for testing how to show all possible movement options of a piece (particularly complex example, but we should be able to handle it)
     state.board = bo.decodeBoard([
