--- a/index.html
+++ b/index.html
@@ -10,17 +10,89 @@
   <link rel="apple-touch-icon" href="/assets/image/favicon.png" />
   <link rel="stylesheet" href="/assets/style/main.css" />
   <link rel="stylesheet" href="/assets/style/reset.css" />
+
+  <style>
+    .options-group {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 
 <body>
   <main>
     <h1>Checkers</h1>
 
-    <div class="btn-group" style="margin-top: 24px; max-width: 256px;">
-      <a href="/ai-vs-ai/" class="btn-primary">AI vs.AI</a>
-      <a href="/player-vs-ai/" class="btn-primary">Player vs. AI</a>
-    </div>
+    <form>
+
+      <div class="options-group">
+        <label for="url">
+          <input type="radio" name="url" value="player-vs-player"
+                 disabled/> <!-- unimplemented yet-->
+          Player vs. Player
+        </label>
+        <label for="url">
+          <input type="radio" name="url" value="player-vs-ai"/>
+          Player vs. AI
+        </label>
+        <label for="url">
+          <input type="radio" name="url" value="player-vs-ai"
+                 required/>
+          AI vs. AI
+        </label>
+      </div>
+
+      <div class="options-group">
+        <label for="capturesMandatory">
+          <input type="checkbox" name="capturesMandatory"/>
+          Captures mandatory
+        </label>
+        <label for="bestCapturesMandatory">
+          <input type="checkbox" name="bestCapturesMandatory"/>
+          Best captures mandatory
+        </label>
+      </div>
+
+      <button type="submit" style="margin-top: 2rem; transform: scale(1.3);">
+        Play
+      </button>
+
+    </form>
+
   </main>
+
+  <script>
+    const cap = document.querySelector('[name=capturesMandatory]')
+    const bestCap = document.querySelector('[name=bestCapturesMandatory]')
+
+    function toggleBestCapturesMandatory() {
+      if (cap.checked) {
+        bestCap.removeAttribute('disabled')
+      } else {
+        bestCap.setAttribute('disabled', '')
+      }
+    }
+
+    toggleBestCapturesMandatory()
+    cap.onchange = toggleBestCapturesMandatory
+
+    const form = document.querySelector('form')
+
+    form.onsubmit = evt => {
+      evt.preventDefault()
+
+      const url = new URL('http://' + location.host + '/' + form.url.value)
+      const params = url.searchParams
+
+      params.append('capturesMandatory', cap.checked ? 0 : 1)
+      params.append('bestCapturesMandatory', bestCap.checked ? 0 : 1)
+
+      location.assign(url)
+    }
+  </script>
+
 </body>
 
 </html>
