--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -135,7 +135,7 @@
       '........',
     ].join('\n'));
 
-    const state = new CheckersState(true, initialBoard, captureOptions)
+    const state = new CheckersState(captureOptions, initialBoard)
 
 
     let humanMovementChoices = []
