style: improve project style

--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -10,6 +10,13 @@
   <link rel="apple-touch-icon" href="/assets/image/favicon.png" />
   <link rel="stylesheet" href="/assets/style/main.css" />
   <link rel="stylesheet" href="/assets/style/reset.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" />
+  <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" />
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" />
+  </noscript>
 </head>
 
 <body>
