--- a/ai-vs-ai/index.html
+++ b/ai-vs-ai/index.html
@@ -10,6 +10,13 @@
   <link rel="apple-touch-icon" href="/assets/image/favicon.png" />
   <link rel="stylesheet" href="/assets/style/main.css" />
   <link rel="stylesheet" href="/assets/style/reset.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" />
+  <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" />
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" />
+  </noscript>
 </head>
 
 <body>
@@ -42,7 +49,7 @@
       <label for="jogadas-aleatorias">Jogadas iniciais aleatórias</label><br />
       <input type="number" min=1 step=1 max=20 value=4 id="jogadas-aleatorias"><br />
       <br />
-      <button id="btn-jogar" type="button">Jogar</button>
+      <button id="btn-jogar" class="btn-primary" style="max-width: 256px;" type="button">Jogar</button>
     </div>
   </div>
 
