--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
   <link rel="apple-touch-icon" href="/assets/image/favicon.png" />
   <link rel="stylesheet" href="/assets/style/main.css" />
   <link rel="stylesheet" href="/assets/style/reset.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" />
+  <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" />
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" />
+  </noscript>
 
   <style>
     .options-group {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
       margin-top: 2rem;
     }
   </style>
@@ -38,8 +42,7 @@
           Player vs. AI
         </label>
         <label for="url-ava">
-          <input type="radio" id="url-ava" name="url" value="ai-vs-ai"
-                 required/>
+          <input type="radio" id="url-ava" name="url" value="ai-vs-ai" required/>
           AI vs. AI
         </label>
       </div>
@@ -55,7 +58,7 @@
         </label>
       </div>
 
-      <button type="submit" style="margin-top: 2rem; transform: scale(1.3);">
+      <button type="submit" class="btn-primary" style="margin-top: 2rem;">
         Play
       </button>
 
