--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="description" content="Checkers game made with JS using Minimax algorithm for its Ai">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Checkers</title>
   <link rel="shortcut icon" type="image/png" href="/assets/image/favicon.png" />
