--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -21,20 +21,21 @@
 
 <body>
   <main>
+    <form action="/player-vs-ai/play" style="width: 512px;">
+      <div class="input-group">
+        <label for="heuristic">Heuristic</label>
+        <select name="heuristic" id="heuristic">
+          <option value="heuristicCountPieces">countPieces</option>
+          <option value="heuristicClusters">clusters</option>
+        </select>
+      </div>
 
-    <form action="/player-vs-ai/play">
-      <label for="heuristic">Heuristic</label>
-      <select name="heuristic" id="heuristic">
-        <option value="heuristicCountPieces">countPieces</option>
-        <option value="heuristicClusters">clusters</option>
-      </select>
-      <br/>
+      <div class="input-group" style="margin-top: 32px;">
+        <label for="depth">Search depth</label>
+        <input name="depth" type="number" min=1 step=1 max=15 value=7 id="depth" />
+      </div>
 
-      <label for="depth">Search depth</label>
-      <input name="depth" type="number" min=1 step=1 max=15 value=7 id="depth"/>
-      <br/>
-
-      <input type="submit" value="Play"/>
+      <button type="submit" class="btn-primary" style="margin-top: 64px;">Play</button> 
     </form>
 
   </main>
