feat: add info for player-vs-ai screen

--- a/player-vs-ai/index.html
+++ b/player-vs-ai/index.html
@@ -21,6 +21,7 @@
 
 <body>
   <main>
+    <h1 style="margin-bottom: 32px;">AI setup</h1>
     <form action="/player-vs-ai/play" style="width: 512px;">
       <div class="input-group">
         <label for="heuristic">Heuristic</label>
